crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@554.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO alpha_pos SELECT  1.0, i, to_char(i % 10, 'FM0000') FROM generate_series(100, 399) i WHERE i % 10 IN (1, 3, 4, 6, 8, 9);"
---
InsertStmt@0..132
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..21
    Ident@12..21 "alpha_pos"
  Whitespace@21..22 " "
  SelectStmt@22..130
    Select@22..28 "SELECT"
    Whitespace@28..30 "  "
    ResTarget@30..33
      AConst@30..33
        Fconst@30..33 "1.0"
    Ascii44@33..34 ","
    Whitespace@34..35 " "
    ResTarget@35..36
      ColumnRef@35..36
        Ident@35..36 "i"
    Ascii44@36..37 ","
    Whitespace@37..38 " "
    ResTarget@38..62
      FuncCall@38..62
        Ident@38..45 "to_char"
        Ascii40@45..46 "("
        AExpr@46..52
          ColumnRef@46..47
            Ident@46..47 "i"
          Whitespace@47..48 " "
          Ascii37@48..49 "%"
          Whitespace@49..50 " "
          AConst@50..52
            Iconst@50..52 "10"
        Ascii44@52..53 ","
        Whitespace@53..54 " "
        AConst@54..62
          Sconst@54..62 "'FM0000'"
    Ascii41@62..63 ")"
    Whitespace@63..64 " "
    From@64..68 "FROM"
    Whitespace@68..69 " "
    RangeFunction@69..96
      List@69..93
        FuncCall@69..93
          Ident@69..84 "generate_series"
          Ascii40@84..85 "("
          AConst@85..88
            Iconst@85..88 "100"
          Ascii44@88..89 ","
          Whitespace@89..90 " "
          AConst@90..93
            Iconst@90..93 "399"
      Ascii41@93..94 ")"
      Whitespace@94..95 " "
      Alias@95..96
        Ident@95..96 "i"
    Whitespace@96..97 " "
    Where@97..102 "WHERE"
    Whitespace@102..103 " "
    AExpr@103..130
      AExpr@103..109
        ColumnRef@103..104
          Ident@103..104 "i"
        Whitespace@104..105 " "
        Ascii37@105..106 "%"
        Whitespace@106..107 " "
        AConst@107..109
          Iconst@107..109 "10"
      Whitespace@109..110 " "
      InP@110..112 "IN"
      Whitespace@112..113 " "
      Ascii40@113..114 "("
      List@114..130
        AConst@114..115
          Iconst@114..115 "1"
        Ascii44@115..116 ","
        Whitespace@116..117 " "
        AConst@117..118
          Iconst@117..118 "3"
        Ascii44@118..119 ","
        Whitespace@119..120 " "
        AConst@120..121
          Iconst@120..121 "4"
        Ascii44@121..122 ","
        Whitespace@122..123 " "
        AConst@123..124
          Iconst@123..124 "6"
        Ascii44@124..125 ","
        Whitespace@125..126 " "
        AConst@126..127
          Iconst@126..127 "8"
        Ascii44@127..128 ","
        Whitespace@128..129 " "
        AConst@129..130
          Iconst@129..130 "9"
  Ascii41@130..131 ")"
  Ascii59@131..132 ";"

