crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@556.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE beta (a double precision, b int, c text) PARTITION BY RANGE (a);"
---
CreateStmt@0..77
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..17
    Ident@13..17 "beta"
  Whitespace@17..18 " "
  Ascii40@18..19 "("
  ColumnDef@19..37
    Ident@19..20 "a"
    Whitespace@20..21 " "
    TypeName@21..37
      DoubleP@21..27 "double"
      Whitespace@27..28 " "
      Precision@28..37 "precision"
  Ascii44@37..38 ","
  Whitespace@38..39 " "
  ColumnDef@39..44
    Ident@39..40 "b"
    Whitespace@40..41 " "
    TypeName@41..44
      IntP@41..44 "int"
  Ascii44@44..45 ","
  Whitespace@45..46 " "
  ColumnDef@46..52
    Ident@46..47 "c"
    Whitespace@47..48 " "
    TypeName@48..52
      TextP@48..52 "text"
  Ascii41@52..53 ")"
  Whitespace@53..54 " "
  PartitionSpec@54..75
    Partition@54..63 "PARTITION"
    Whitespace@63..64 " "
    By@64..66 "BY"
    Whitespace@66..67 " "
    Range@67..72 "RANGE"
    Whitespace@72..73 " "
    Ascii40@73..74 "("
    PartitionElem@74..75
      Ident@74..75 "a"
  Ascii41@75..76 ")"
  Ascii59@76..77 ";"

