crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@568.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO beta_pos SELECT  1.0, i, to_char(i % 10, 'FM0000') FROM generate_series(100, 149) i WHERE i % 10 IN (2, 3, 4, 6, 7, 9);"
---
InsertStmt@0..131
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "beta_pos"
  Whitespace@20..21 " "
  SelectStmt@21..129
    Select@21..27 "SELECT"
    Whitespace@27..29 "  "
    ResTarget@29..32
      AConst@29..32
        Fconst@29..32 "1.0"
    Ascii44@32..33 ","
    Whitespace@33..34 " "
    ResTarget@34..35
      ColumnRef@34..35
        Ident@34..35 "i"
    Ascii44@35..36 ","
    Whitespace@36..37 " "
    ResTarget@37..61
      FuncCall@37..61
        Ident@37..44 "to_char"
        Ascii40@44..45 "("
        AExpr@45..51
          ColumnRef@45..46
            Ident@45..46 "i"
          Whitespace@46..47 " "
          Ascii37@47..48 "%"
          Whitespace@48..49 " "
          AConst@49..51
            Iconst@49..51 "10"
        Ascii44@51..52 ","
        Whitespace@52..53 " "
        AConst@53..61
          Sconst@53..61 "'FM0000'"
    Ascii41@61..62 ")"
    Whitespace@62..63 " "
    From@63..67 "FROM"
    Whitespace@67..68 " "
    RangeFunction@68..95
      List@68..92
        FuncCall@68..92
          Ident@68..83 "generate_series"
          Ascii40@83..84 "("
          AConst@84..87
            Iconst@84..87 "100"
          Ascii44@87..88 ","
          Whitespace@88..89 " "
          AConst@89..92
            Iconst@89..92 "149"
      Ascii41@92..93 ")"
      Whitespace@93..94 " "
      Alias@94..95
        Ident@94..95 "i"
    Whitespace@95..96 " "
    Where@96..101 "WHERE"
    Whitespace@101..102 " "
    AExpr@102..129
      AExpr@102..108
        ColumnRef@102..103
          Ident@102..103 "i"
        Whitespace@103..104 " "
        Ascii37@104..105 "%"
        Whitespace@105..106 " "
        AConst@106..108
          Iconst@106..108 "10"
      Whitespace@108..109 " "
      InP@109..111 "IN"
      Whitespace@111..112 " "
      Ascii40@112..113 "("
      List@113..129
        AConst@113..114
          Iconst@113..114 "2"
        Ascii44@114..115 ","
        Whitespace@115..116 " "
        AConst@116..117
          Iconst@116..117 "3"
        Ascii44@117..118 ","
        Whitespace@118..119 " "
        AConst@119..120
          Iconst@119..120 "4"
        Ascii44@120..121 ","
        Whitespace@121..122 " "
        AConst@122..123
          Iconst@122..123 "6"
        Ascii44@123..124 ","
        Whitespace@124..125 " "
        AConst@125..126
          Iconst@125..126 "7"
        Ascii44@126..127 ","
        Whitespace@127..128 " "
        AConst@128..129
          Iconst@128..129 "9"
  Ascii41@129..130 ")"
  Ascii59@130..131 ";"

